--- a/aboutme.html
+++ b/aboutme.html
@@ -14,10 +14,10 @@
             </nav>
             <a href="contact.html" class="CTA"><button>Lets Get in Touch</button></a>
         </header>
-        <h1>About Me</h1>
+        <h2 class="aboutme">About Me</h2>
         <div style="text-align: center;">
             <p>My name is Jonnah. I am a dog trainer and animal lover.</p>
-            <img src="jonnah.png" class="mainpageimg" alt="haha">
+            <img src="jonnah.png" class="jonnah" alt="haha">
         </div>
     </body>
 </html>
