--- a/index.html
+++ b/index.html
@@ -32,10 +32,19 @@
                 <p>At K9Culture, I don't just train your dog. I will teach you the best way to communicate commands to your pet and ensure that they listen.</p>
             </div>
         </div>
-        <div style="background-color: rgba(0, 0, 0, 0.699);" class="maintext">
-            <canvas id="myChart" width="300" height="300"></canvas>
+        <div style="background-color: rgba(0, 0, 0, 0.849);" class="maintext">
+            <canvas id="myChart" width="400" height="380"></canvas>
             <div>
-                <p style="color: aliceblue; float: right;">67% of households in America own a pet. Only a staggering 4% get training for their dogs.</p>
+                <p style="color: aliceblue; float: center;">67% of households in America own a pet. With 76,811,305 household dogs in America, training is more important now more than ever.</p>
+                <br>
+                <br>
+                <p>
+                    Doggo ipsum porgo he made many woofs heckin heck wow very biscit woofer doggorino, sub woofer corgo fluffer very jealous pupper borking doggo. Borkdrive fluffer floofs adorable doggo ur givin me a spook, very taste wow heck. shibe. The neighborhood pupper wow such tempt pupper puggorino shibe, adorable doggo blop many pats. Shibe big ol pupper stop it fren wrinkler many pats, what a nice floof long doggo adorable doggo.
+
+floofs very jealous pupper very good spot. Very taste wow thicc waggy wags ur givin me a spook puggo blop wow very biscit, pupperino long water shoob very hand that feed shibe stop it fren. Noodle horse tungg thicc pupper borkf puggorino, lotsa pats blep aqua doggo borking doggo floofs puggorino, big ol woofer pupperino you are doing me a frighten. Super chub mlem long doggo very hand that feed shibe length boy very jealous pupper very good spot blep very taste wow, snoot porgo many pats very taste wow borkf you are doing me a frighten.
+
+Borking doggo blop such treat you are doin me a concern dat tungg tho, length boy big ol pupper doing me a frighten. Shibe adorable doggo pupper what a nice floof, shibe. Pats ruff adorable doggo wow such tempt super chub floofs, what a nice floof smol borking doggo with a long snoot for pats many pats you are doing me a frighten. Wrinkler wow such tempt very hand that feed shibe, he made many woofs. Heckin he made many woofs very jealous pupper big ol pupper smol smol borking doggo with a long snoot for pats, extremely cuuuuuute vvv lotsa pats many pats corgo, clouds long doggo the neighborhood pupper big ol. You are doing me a frighten very good spot shooberino very hand that feed shibe, blop corgo the neighborhood pupper bork, shoober long doggo.
+                </p>
             </div>
         </div>
 
