--- a/pricing.html
+++ b/pricing.html
@@ -12,7 +12,7 @@
                     <li><a href="aboutme.html">About Me</a></li>
                 </ul>
             </nav>
-            <a href="contact.html" class="CTA"><button>Lets Get in Touch</button></a>
+            <a href="contact.html" class="CTA"><button>Contact Me!</button></a>
         </header>
     </body>
 </html>
