--- a/aboutme.html
+++ b/aboutme.html
@@ -7,7 +7,7 @@
            <a href="index.html"><img class="img1" src="logo.PNG" alt="logo"></a>
             <nav>
                 <ul class="nav_links">
-                    <li><a href="index.html">Schedule</a></li>
+                    <li><a href="schedule.html">Schedule</a></li>
                     <li><a href="pricing.html">Pricing</a></li>
                     <li><a href="aboutme.html">About Me</a></li>
                 </ul>
