--- a/schedule.html
+++ b/schedule.html
@@ -10,45 +10,64 @@
            <a href="index.html"><img class="img1" src="logo.PNG" alt="logo"></a>
             <nav>
                 <ul class="nav_links">
-                    <li><a href="index.html">Schedule</a></li>
+                    <li><a href="schedule.html">Schedule</a></li>
                     <li><a href="pricing.html">Pricing</a></li>
                     <li><a href="aboutme.html">About Me</a></li>
                 </ul>
             </nav>
             <a href="contact.html" class="CTA"><button>Contact Me!</button></a>
         </header>
-        <div class="hero">
-            <div class="hero-text">
-            <h2>Happy, Healthy, and Well Trained.</h2>
-            <br>
-            <button>Lets Work Together</button>
-            </div>
-        </div>
-        <div class="maintext">
-            <div>
-                <h3>Why Dog Training Is Important</h3>
-                <p>The more well behaved your dog is, the more places he or she can go. This leads to a greater quality of life for your furry friend.</p>
-            </div>
-            <div>
-                <h3>My Approach</h3>
-                <p>At K9Culture, I don't just train your dog. I will teach you the best way to communicate commands to your pet and ensure that they listen.</p>
-            </div>
-        </div>
-            <div id="myCalendarWrapper"></div>
-
-
-        <script>
-            const myCalender = new CalendarPicker('#myCalendarWrapper', {
-                // options here
-                myCalender.value,
-                myCalender.value.getDay(),
-          });
-          const nextYear = new Date().getFullYear() + 1;
-const myCalender = new CalendarPicker('#myCalendarWrapper', {
-      min: new Date(),
-      max: new Date(nextYear, 10) 
-});
-        </script>
+        <div class="month">
+            <ul>
+              <li class="prev">&#10094;</li>
+              <li class="next">&#10095;</li>
+              <li>August<br><span style="font-size:18px">2021</span></li>
+            </ul>
+          </div>
+          
+          <ul class="weekdays">
+            <li>Mo</li>
+            <li>Tu</li>
+            <li>We</li>
+            <li>Th</li>
+            <li>Fr</li>
+            <li>Sa</li>
+            <li>Su</li>
+          </ul>
+          
+          <ul class="days">
+            <li><span class="active">1</span></li>
+            <li>2</li>
+            <li>3</li>
+            <li>4</li>
+            <li>5</li>
+            <li>6</li>
+            <li>7</li>
+            <li>8</li>
+            <li>9</li>
+            <li>10</li>
+            <li>11</li>
+            <li>12</li>
+            <li>13</li>
+            <li>14</li>
+            <li>15</li>
+            <li>16</li>
+            <li>17</li>
+            <li>18</li>
+            <li>19</li>
+            <li>20</li>
+            <li>21</li>
+            <li>22</li>
+            <li>23</li>
+            <li>24</li>
+            <li>25</li>
+            <li>26</li>
+            <li>27</li>
+            <li>28</li>
+            <li>29</li>
+            <li>30</li>
+            <li>31</li>
+          </ul>
         <footer>
             <div class="footer">
                 <h3>K9Culture</h3>
