--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         <div style="background-color: #CFCABE; text-align: center;">
             <canvas id="myChart" width="400" height="380"></canvas>
             <div>
-                <p style="color: aliceblue; float: center;">67% of households in America own a pet. With 76,811,305 household dogs in America, training is more important now more than ever.</p>
+                <p style="color: rgb(0, 0, 0); float: center;">67% of households in America own a pet. With 76,811,305 household dogs in America, training is more important now more than ever.</p>
                 <br>
                 <br>
                 <div class="maintext" style="float:right;">
@@ -97,7 +97,7 @@ Borking doggo blop such treat you are doin me a concern dat tungg tho, length bo
                  responsive: false,
                  legend: {
                     labels: {
-                        fontColor: "white",
+                        fontColor: "black",
                     }
                 }
              }
