--- a/contact.html
+++ b/contact.html
@@ -1,19 +1,32 @@
 <html>
     <head>
         <link rel="stylesheet" href="main.css">
+        <script src="app.js"></script>
     </head>
     <body>
         <header>
             <a href="index.html"><img class="img1" src="logo.PNG" alt="logo"></a>
             <nav>
                 <ul class="nav_links">
-                    <li><a href="index.html">Schedule</a></li>
+                    <li><a href="schedule.html">Schedule</a></li>
                     <li><a href="pricing.html">Pricing</a></li>
                     <li><a href="aboutme.html">About Me</a></li>
                 </ul>
             </nav>
             <a href="contact.html" class="CTA"><button>Contact Me!</button></a>
         </header>
+        <div style="text-align: center;">
+            <h1>Contact Form</h1>
+            <input type="text" placeholder="Enter your full name" id="clientName"/>
+            <br><br>
+            <input type="email" placeholder="Enter your email" id="email"/>
+            <br><br>
+            <span>Message</span>
+            <br>
+            <textarea id="message" rows="4"></textarea>
+            <br><br>
+            <button onclick="sendContact();">Submit</button>
+        </div>
         <footer>
             <div class="footer">
                 <h3>K9Culture</h3>
